# learn-claude-code

./: .env.example  .gitignore  CLAUDE.md  claude_tools_guide.md  pyproject.toml  v0_bash_agent.py  v0_bash_agent_glm.py  v1_basic_agent.py  v1_basic_agent_glm.py  v2_todo_agent_glm.py  v3_subagent_glm.py  v4_skills_agent_glm.py
.claude/: settings.local.json
claude_agent/: deep_research.py  deep_research_DESIGN.md
docs/: claude_prompt_deep_dive.md  claude_prompt_deep_dive_2.md  v0-GLM版本代码精读.md  v0-提示词深度精读.md  v1-GLM版本代码精读.md  v2-Todo版本代码精读.md  v2-核心代码解析.md  v3-Subagent版本代码精读.md  v4-Skills版本代码精读.md
jj_agent/: jj_agent_prd.md  jj_agent_prd.txt
jj_agent_v2/: akshare.py
prompt/: claude_prompt_zh.txt  claude_tool_zh.json
study_agent/: 00_agent学习规划byPP.md  01_Re-Act-AI-Agent-Device.md  02_Designing-AI-Agents-总结.md  03_最佳Agentic-AI框架2025对比-LangGraph-AutoGen-CrewAI.md  05_AI智能体从第一性原理理解-总结.md  06_LLM-Agents终极指南2025.md  study_summary.html
study_agent/common/: llm_config.py  trace_handler.py
study_agent/doc/: 02_Designing AI Agents_ A Strategic Guide to ReAct, Multi-Agent & Graph Architectures.md  02_Designing-AI-Agents-中文翻译.md  04_2025年AI智能体框架选择完整指南.md  05_AI智能体从第一性原理理解-总结.md  05_AI智能体从第一性原理理解.md  06_LLM-Agents终极指南-总结.md
study_agent/kmeans/: kmeans_demo.py
study_agent/report/: harness-design-long-running-apps.html  openai_harness-engineering.html
study_agent/study_langchain/: 01_quick_start.py  01_quick_start_error.py  01_quick_start_react.py  02_streaming.py  03_middleware.py  04_mcp_client.py  05_knowledge_base_save.py  llm_config.py  (+4 more)
video/: cmd.txt  cookies.txt
(+108 files in other folders)
