[project]
name = "learn-claude-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.30",
    "claude-agent-sdk>=0.1.47",
    "dotenv>=0.9.9",
    "httpx-sse>=0.4.3",
    "langchain>=1.2.12",
    "langchain-anthropic>=1.3.4",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "langchainhub>=0.1.21",
    "langgraph>=1.1.2",
    "langsmith>=0.7.17",
    "openai>=2.18.0",
    "requests>=2.32.5",
]

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
